@@ -1,6 +1,6 @@
 Package: ncar
-Version: 0.3.6
-Date: 2017-07-18 KST
+Version: 0.3.7
+Date: 2017-08-16 KST
 Title: Noncompartmental Analysis for Pharmacokinetic Report
 Description: Conduct a noncompartmental analysis as closely as possible to the most widely used commercial software for pharmacokinetic analysis, i.e. 'Phoenix(R) WinNonlin(R)' <https://www.certara.com/software/pkpd-modeling-and-simulation/phoenix-winnonlin/>.
              Some features are
@@ -10,7 +10,7 @@ Description: Conduct a noncompartmental analysis as closely as possible to the m
              4) Interval(partial) AUCs with 'linear' or 'log' interpolation method
              5) Produce pdf, rtf, text report files.
              * Reference: Gabrielsson J, Weiner D. Pharmacokinetic and Pharmacodynamic Data Analysis - Concepts and Applications. 5th ed. 2016. (ISBN:9198299107).
-Depends: R (>= 2.0.0), rtf, NonCompart
+Depends: R (>= 2.0.0), rtf, NonCompart (>= 0.3.3)
 Author: Kyun-Seop Bae [aut]
 Maintainer: Kyun-Seop Bae <k@acr.kr>
 Copyright: 2016-2017, Kyun-Seop Bae
@@ -19,5 +19,5 @@ NeedsCompilation: no
 LazyLoad: yes
 Repository: CRAN
 URL: https://cran.r-project.org/package=ncar
-Packaged: 2017-07-18 11:41:33 UTC; K
-Date/Publication: 2017-07-18 12:46:30 UTC
+Packaged: 2017-08-16 01:23:17 UTC; K
+Date/Publication: 2017-08-16 03:27:13 UTC
