@@ -1,17 +1,17 @@
-d2e16b2cbdafa40161617184cfc6ff72 *DESCRIPTION
+1ac6d0a26b4b73538280ae9c3962e618 *DESCRIPTION
 6741ffa9d27d4f963109e55ab51de7ec *NAMESPACE
-6813a64e9859426e9b59016134070a99 *R/BasicUtil.R
+02644756736e846dbfd43d85a731c0bb *R/BasicUtil.R
 0e9c32a50b6e8507778a13c716bbbbbb *R/Round.R
-c0b9e4622bbd48ab13327583eeff1923 *R/pdfNCA.R
-738d2027496a434ecae6d31f6ca26cc9 *R/rtfNCA.R
+a53c0f5cc0d9a6400e39518fb11dd1f9 *R/pdfNCA.R
+4f092aa956b39019382014ddcfe65728 *R/rtfNCA.R
 a8a18d565a61ec2142e164d8ab9795e9 *R/sysdata.rda
-8831b243dcc6856d6a8fa7bd1f53c9f6 *R/txtNCA.R
-63bf9f52e6988eeae23a62c19e03f308 *inst/NEWS.Rd
-7b3266f1e027835c3c3df2fd70da5f7f *inst/doc/ncar-manual.pdf
-dec892a88ffc7deac747029ca6601391 *man/BasicUtil.Rd
+0fc12faeb41c1cfd7d9749be67e5fa89 *R/txtNCA.R
+8753d4e7bedbbba0b7fb54f870d62599 *inst/NEWS.Rd
+7df0965d0b82c815633adac0ff3bdcef *inst/doc/ncar-manual.pdf
+3cd1f00857aa883eb77ef0f43d581e92 *man/BasicUtil.Rd
 0230f2f2aeb33548a3edcd654f7843fd *man/Round.Rd
 baebda100ff925f877391bf4b9935619 *man/RptCfg.Rd
 ba8ba805c7cf19c230be1a635fd61a46 *man/ncar-package.Rd
 b1d4cffe1462a4d73cd6b475a7bf83a2 *man/pdfNCA.Rd
 7b97b2f8087629c3c414a1313c2a2029 *man/rtfNCA.Rd
-87953b29fbb7a8e03fb8a3e054882b08 *man/txtNCA.Rd
+15c68755e07c8975a9ec208830b4a078 *man/txtNCA.Rd
